--- a/TODO
+++ b/TODO
@@ -24,6 +24,16 @@ Features
 
 * mutual modules
 
+User interface
+--------------
+
+* Go to declaration site when user clicks on name (or something like
+  that).
+
+* Highlighting error positions.
+
+* Highlighting comments, module names, fixity declarations.
+
 * locally nameless representation
 
 * pattern completeness
