--- a/TODO
+++ b/TODO
@@ -55,6 +55,11 @@ Fixes
 * Enable parsing of non-trivial literate files (see
   examples/syntax/highlighting/Test.lagda).
 
+[Serialisation]
+
+* Deserialisation would be more robust if the first thing read was the
+  interface number.
+
 [Printing]
 
 * print patterns in mixfix notation (AbstractToConcrete)
@@ -94,10 +99,6 @@ Fixes
 * write better tests
 
 [Bugs]
-
-* Ranges are not preserved in .agdai files. It would be beneficial for
-  the user interface if they were (at least the source file should not
-  be set to "[imported]").
 
 * emacs interface gets the metas in the wrong order for local definitions (?)
 
