split Path example into multiple modules

--- a/TODO
+++ b/TODO
@@ -24,6 +24,8 @@ Features
 
 * mutual modules
 
+* more liberal builtin bindings (Nat as a special case of a general sequence)
+
 User interface
 --------------
 
