--- a/README
+++ b/README
@@ -14,20 +14,26 @@ To install Agda 2, proceed as follows:
      cd Agda2
 
 1.5) On Windows, overwrite Agda.cabal by Agda.cabal.win
-    
+
      cp Agda.cabal.win Agda.cabal
 
-2) Build and install the Agda 2 library:
+2) Build and install the Agda 2 library. If you want to install it in
+   the default location (you may need root privileges for this), use
+   the following commands:
 
      runhaskell Setup.hs configure
      runhaskell Setup.hs build
      runhaskell Setup.hs install
 
-   You may want to set some flags above, for instance as follows:
+   You can select another location for the installation of the library
+   by using the following commands:
 
-     runhaskell Setup.hs configure --prefix=~/<some path>
+     runhaskell Setup.hs configure --prefix=<the install path>
      runhaskell Setup.hs build
      runhaskell Setup.hs install --user
+
+   You can also give other options to the installation script, see
+   runhaskell Setup.hs configure --help.
 
 3) If you want to use the Emacs mode, build and install it (see
    below).
@@ -39,6 +45,14 @@ To install Agda 2, proceed as follows:
      runhaskell Setup.hs configure
      runhaskell Setup.hs build
      runhaskell Setup.hs install
+     cd -
+
+   Or:
+
+     cd src/main
+     runhaskell Setup.hs configure --prefix=<the install path>
+     runhaskell Setup.hs build
+     runhaskell Setup.hs install --user
      cd -
 
 ------------------------------------------------------------------------
