--- a/README
+++ b/README
@@ -144,6 +144,13 @@ To use the Agda 2 Emacs mode:
            ; Add more keybindings here.
            )))
 
+6. In order to display the unicode characters you need the appropriate font.
+   Something like this in your .Xdefaults or .Xresources should do the trick:
+
+    emacs*font: -misc-fixed-medium-r-normal--15-140-75-75-c-90-iso10646-1
+
+  The key is the iso10646 part.
+
 ----------------------------------------------------------------
 Appendix: Installation scripts for (at least Ubuntu Linux)
 
