Updated the outdated documentation for font selection.

--- a/README
+++ b/README
@@ -146,16 +146,12 @@ To use the Agda 2 Emacs mode:
            )))
 
    Another side note: In order to display Unicode characters you need
-   to use a font which contains the glyphs in question. Depending on
-   your installation this may be enabled by default; if not, try
-   putting something like the following in your .Xdefaults or
-   .Xresources file (under a Linux-like OS) and log in again:
-
-   emacs*font: -misc-fixed-medium-r-normal--15-140-75-75-c-90-iso10646-1
-
-   (Look for fonts with iso10646 in their names; however, note that
-   this part does not guarantee that the font has glyphs for the
-   characters you want...)
+   to use a font which contains the glyphs in question. If such a font
+   is not enabled by default (empty boxes are displayed instead of
+   proper characters) you need to select another font. Do this by
+   running
+     M-x customize-face RET agda2-default-face RET
+   in Emacs and changing the options in a suitable way.
 
 ----------------------------------------------------------------
 Appendix: Installation scripts for (at least Ubuntu Linux)
