--- a/README
+++ b/README
@@ -155,7 +155,7 @@ To use the Agda 2 Emacs mode:
    setting to a suitable font.
 
 ----------------------------------------------------------------
-Appendix: Installation scripts for (at least Ubuntu Linux)
+Appendix: Installation scripts for (at least) Ubuntu Linux
 
 # A.1 Installing binary
 
