--- a/examples/MAlonzo/README
+++ b/examples/MAlonzo/README
@@ -15,7 +15,7 @@ by the command
 
 ghc <GHC FLAGS> -i<DIR> -main-is MAlonzo.<FILE> <DIR>/Malonzo/<FILE>.hs --make
 
-It is assumed that <FILE>.agda contains a definition of main :: IO ().
+It is assumed that <FILE>.agda contains a definition of main :: IO a.
 If it does not, ghc finishes with an error, but never mind.
 
 
