Submitted version of HCAR entry for November 2008.

--- a/doc/HCAR/November-2008.tex
+++ b/doc/HCAR/November-2008.tex
@@ -41,7 +41,7 @@ New since last time:
 \item Agda packages for Debian/Ubuntu have been prepared by Liyang HU,
   and Kuragaki-san has constructed a new Agda installer for Windows.
 \item A new Emacs input method, which contains bindings for many
-  Unicode symbols, has been developed by Nils Anders Danielsson.
+  Unicode symbols, has been implemented by Nils Anders Danielsson.
 \end{itemize}
 
 \FurtherReading
