--- a/README
+++ b/README
@@ -1,79 +1,73 @@
-------------------------------------------------------------------------
-To install Agda 2 from source, proceed as follows:
+README
+------
 
-(An appendix below lists partial installation scripts for Ubuntu
+We recommend that you install Agda 2 using a binary package. To
+install Agda 2 from source, proceed as follows:
+
+(An appendix below lists a partial installation script for Ubuntu
 Linux.)
 
-0) Install prerequisites (recent versions of GHC, Alex and Happy, and
-   perhaps also darcs).
+0) Install prerequisites (recent versions of GHC, Alex, Happy and
+   cabal-install, and perhaps also darcs, Emacs and haskell-mode).
 
-   GHC:	   http://www.haskell.org/ghc/
-   Alex:   http://www.haskell.org/alex/
-   Happy:  http://www.haskell.org/happy/
-   darcs:  http://darcs.net/
-
-   In addition to the libraries distributed with GHC you will need the binary
-   and zlib packages which can be downloaded from Hackage:
-
-     http://hackage.haskell.org/cgi-bin/hackage-scripts/package/binary-0.4.1
-     http://hackage.haskell.org/cgi-bin/hackage-scripts/package/zlib-0.4.0.1
+   GHC:           http://www.haskell.org/ghc/
+   Alex:          http://www.haskell.org/alex/
+   Happy:         http://www.haskell.org/happy/
+   cabal-install: http://www.haskell.org/cabal/
+   darcs:         http://darcs.net/
+   GNU Emacs:     http://www.gnu.org/software/emacs/
+   haskell-mode:  http://haskell.org/haskell-mode/ (version 2.1 or later)
 
    For non-Windows users:
-     The zlib Haskell package requires the development files of the zlib
-     C package to be installed (see http://zlib.net). Your package
-     manager may be able to install these files for you. (For instance,
-     on Debian or Ubuntu it should suffice to run
+     The development files for the C library zlib have to be installed
+     (see http://zlib.net). Your package manager may be able to
+     install these files for you. For instance, on Debian or Ubuntu
+     it should suffice to run
        apt-get install zlib1g-dev
-     as root to get the correct files installed.)
-
-   You will also need QuickCheck version 2, which can be obtained using darcs
-
-     darcs get --partial http://darcs.haskell.org/QuickCheck
-
-   or downloaded from
-
-     http://www.cs.chalmers.se/~ulfn/files/QuickCheck-2.0.tar.gz
+     as root to get the correct files installed.
 
 1) Download Agda 2, perhaps as follows:
 
      darcs get --partial http://code.haskell.org/Agda
      cd Agda
 
-2) Build and install the Agda 2 library. If you want to install it in
-   the default location (you may need root privileges for this), use
-   the following commands:
+2) If your system is Unix-like you can now hopefully install the
+   Agda 2 library, batch-mode tool and Emacs mode by running
 
-     runhaskell Setup.hs configure
-     runhaskell Setup.hs build
-     runhaskell Setup.hs install
+     make install PREFIX=<installation location>
+
+   (the PREFIX=<...> part can be omitted if the default location is OK
+   for you).
+
+   If your system is not sufficiently Unix-like, or you want to have
+   more control, continue reading below.
+
+3) Build and install the Agda 2 library. If you want to install it in
+   the default location (you may need root privileges for this), use
+   the following command in the root of the Agda source tree:
+
+     cabal install
 
    You can select another location for the installation of the library
-   by using the following commands:
+   by using the following command:
 
-     runhaskell Setup.hs configure --user --prefix=<the install path>
-     runhaskell Setup.hs build
-     runhaskell Setup.hs install
+     cabal install --prefix=<the install path>
 
-   You can also give other options to the installation script, see
-   runhaskell Setup.hs configure --help.
+   You can also give other options to the installer, see the built-in
+   documentation of cabal-install:
 
-3) If you want to use the Emacs mode (recommended), build and install
+     cabal install --help
+
+4) If you want to use the Emacs mode (recommended), build and install
    it (see below).
 
-4) If you want to use the batch-mode Agda tool (not necessary), go to
-   the src/main directory, and build and install it:
+5) If you want to use the batch-mode Agda tool (not necessary), go to
+   the src/main directory and run the following commands:
 
-     runhaskell Setup.hs clean  # To ensure recompilation when upgrading.
-     runhaskell Setup.hs configure
-     runhaskell Setup.hs build
-     runhaskell Setup.hs install
+     cabal clean    # To ensure recompilation when upgrading.
+     cabal install
 
-   Or:
-
-     runhaskell Setup.hs clean
-     runhaskell Setup.hs configure --user --prefix=<the install path>
-     runhaskell Setup.hs build
-     runhaskell Setup.hs install
+   (You can give options to cabal-install just as under step 2.)
 
    When upgrading Agda, note that the batch-mode tool also needs to be
    rebuilt.
@@ -197,15 +191,6 @@ To use the Agda 2 Emacs mode:
          You should see all the characters without white-boxes.
   **END OF "Under Windows ..."
 
-0. Install haskell-mode, version 2.1 or later (see
-   http://haskell.org/haskell-mode/).
-
-   Add
-
-     (load "<The directory where you installed haskell-mode>/haskell-site-file")
-
-   to your .emacs file.
-
 1. Install Agda 2. (See above.)
 
 2. Copy the .el files in src/full/Agda/Interaction/emacs-mode to some
@@ -258,87 +243,14 @@ To use the Agda 2 Emacs mode:
    setting to a suitable font.
 
 ------------------------------------------------------------------
-Appendix: Partial installation scripts for (at least) Ubuntu Linux
-  (tested 080806 on Ubuntu 8.04 LTS)
+Appendix: Partial installation script for (at least) Ubuntu Linux
 
-# A.0 Installing Haskell compilation tools
-
-  sudo apt-get install ghc6 happy alex darcs
-
-# A.1 Installing binary
-
-  wget http://hackage.haskell.org/packages/archive/binary/0.4.2/binary-0.4.2.tar.gz
-  tar -zxf binary-0.4.2.tar.gz
-  cd binary-0.4.2
-  runhaskell Setup.lhs configure
-  runhaskell Setup.lhs build
-  sudo runhaskell Setup.lhs install
-  cd ..
-
-# A.2 Installing zlib
-
-  sudo apt-get install zlib1g-dev
-  wget http://hackage.haskell.org/packages/archive/zlib/0.4.0.4/zlib-0.4.0.4.tar.gz
-  tar -zxf zlib-0.4.0.4.tar.gz
-  cd zlib-0.4.0.4
-  runhaskell Setup.hs configure
-  runhaskell Setup.hs build
-  sudo runhaskell Setup.hs install
-  cd ..
-
-# A.3 Installing mtl
-
-  # If ubuntu is fresh enough: 
-  #   sudo apt-get install libghc6-mtl-dev
-  # otherwise
-  wget http://hackage.haskell.org/packages/archive/mtl/1.1.0.1/mtl-1.1.0.1.tar.gz
-  tar -zxf mtl-1.1.0.1.tar.gz
-  cd mtl-1.1.0.1
-  runhaskell Setup.hs configure
-  runhaskell Setup.hs build
-  sudo runhaskell Setup.hs install
-  cd ..
-
-# A.4 Installing QuickCheck 2
-
-  darcs get --partial http://darcs.haskell.org/QuickCheck
-  cd QuickCheck
-  runhaskell Setup.lhs configure
-  runhaskell Setup.lhs build
-  sudo runhaskell Setup.lhs install
-  cd ..
-
-# A.5 Installing haskell-src
-
-  sudo apt-get install libghc6-haskell-src-dev
-  # Alt. get it from hackage: 
-  # wget http://hackage.haskell.org/packages/archive/haskell-src/1.0.1.2/haskell-src-1.0.1.2.tar.gz
-  # ...
-
-# A.6 Installing Agda (including the stand-alone executable)
-
-  # This has to be done from the root directory of an Agda distribution,
-  # see point 1 above.
-
-  runhaskell Setup.hs configure
-  runhaskell Setup.hs build
-  sudo runhaskell Setup.hs install
-
-  cd src/main
-  runhaskell Setup.hs configure
-  runhaskell Setup.hs build
-  sudo runhaskell Setup.hs install
-  cd ../..
-
-
-# A.7 [Optional] Download the Agda standard library
-
-  sudo apt-get install autoconf
-  autoconf
-  ./configure
-  make std-lib
-
-# A.8 [Optional] test the build
-
-  make test
-
+sudo apt-get install ghc6 happy alex darcs emacs haskell-mode zlib1g-dev
+wget http://www.haskell.org/cabal/release/cabal-install-0.6.0.tar.gz
+tar xzf cabal-install-0.6.0.tar.gz
+cd cabal-install-0.6.0
+. bootstrap.sh
+cd ..
+darcs get --partial http://code.haskell.org/Agda
+cd Agda
+sudo make install
